<resources>
    <string name="app_name">Know Your Government</string>
    <string name="question"></string>
    <string name="search"></string>
    <string name="location">No Data For Location</string>
    <string name="name">Name</string>
    <string name="position">Position</string>
    <string name="party">Party</string>
    <string name="content">Party</string>
    <string name="title">Know Your Government</string>
    <string name="power">Powered by</string>
    <string name="link">Google Civic Information API</string>
    <string name="author">©2020, Ho Tin Nghia Le</string>
    <string name="version">Version 1.0</string>
    <string name="sublocation">Sublocation</string>
    <string name="subname">Subname</string>
    <string name="subposition">Subposition</string>
    <string name="subparty">Subparty</string>
    <string name="photo">""</string>
    <string name="logo">""</string>
    <string name="photo2">""</string>
    <string name="logo2">""</string>
    <string name="facebook">"Facebook"</string>
    <string name="twitter">"Twitter"</string>
    <string name="youtube">"YouTube"</string>
    <string name="add">"Address: "</string>
    <string name="addtitle">"Address: "</string>
    <string name="phone">"Phone: "</string>
    <string name="phonetitle">"Phone: "</string>
    <string name="email">"Email: "</string>
    <string name="emailtitle">"Email: "</string>
    <string name="web">"Website: "</string>
    <string name="webtitle">"Website: "</string>

</resources>